# command-autocomplete-protocol

./: Cargo.toml  README.md  flake.nix  result
crates/cas/: Cargo.toml
crates/cas/src/: main.rs
crates/casp/: Cargo.toml
crates/casp/src/: carapace.rs  main.rs  nushell.rs
crates/command-autocomplete/: Cargo.toml
crates/command-autocomplete/src/: carapace.rs  complete.rs  connection.rs  core.rs  lib.rs  main.rs  nushell.rs  router.rs  types.rs
docs/: specification.md
