[package]
name = "command-autocomplete"
description = "Implementation of Command Autocomplete Protocol"
repository = "https://github.com/doriath/command-autocomplete-protocol/tree/main/crates/command-autocomplete"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
toml = {version = "0.8"}

[dev-dependencies]
googletest = {workspace = true}
test-log = {workspace = true}

